--- a/reactApp/src/components/SideBar/SideBar.css
+++ b/reactApp/src/components/SideBar/SideBar.css
@@ -25,7 +25,7 @@
     font-size: 1.1vw;
     letter-spacing: 0.5px;
     line-height: 1.43;
-    background-color: rgba(88, 88, 88, 0.674);
+    background-color: rgba(97, 97, 97, 0.458);
 }
 
 .sideBarTop > .inselected:hover {
@@ -44,7 +44,7 @@
     font-size: 1.1vw;
     letter-spacing: 0.5px;
     line-height: 1.43;
-    background-color: rgba(48, 48, 48, 0.288);
+    background-color: rgba(74, 73, 73, 0.144);
 }
 
 .sideBarContainerDay {
@@ -70,7 +70,8 @@
 
 .sideBarTop {
     display: grid;
-    grid-template-rows: 8% 8% 8% 8% 8% 8%;
+    grid-template-rows: 7% 7% 7% 7% 7% 7%;
+    gap: 3px;
     margin-top: 5%;
 }
 
@@ -95,7 +96,7 @@
 
 
 
-.sideBarTop > div:active {
+.sideBarTop > .inselected:active {
     height: 100%;
     width: 85%;
     padding-left: 5%;
@@ -112,5 +113,5 @@
     font-size: 1.1vw;
     letter-spacing: 0.5px;
     line-height: 1.43;
-    background-color: rgba(88, 88, 88, 0.674);
+    background-color: rgba(88, 88, 88, 0.399);
 }
