--- a/reactApp/src/components/Stock/StockComponent.css
+++ b/reactApp/src/components/Stock/StockComponent.css
@@ -183,9 +183,10 @@
 /*  */
 .containerAll {
     display: grid;
-    grid-template-rows: 12% 88%;
-    height: 530px;
+    grid-template-rows: 12% 88%;  /* 12% + 88% */
+
 }
+
 .tittles {
     display: grid;
     grid-template-columns: 5% 20% 15% 19% 13% 15% 16% 10%;
