--- a/reactApp/src/index.css
+++ b/reactApp/src/index.css
@@ -22,12 +22,13 @@ body {
 body {
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 main {
   display: grid;
   grid-template-columns: 17% 83%;
-  max-height: 100%;
+  max-height: 100vh;
 }
 
 .structureHeader {
@@ -38,6 +39,11 @@ main {
 }
 
 .Routing {
+  overflow: auto;
+  height: 80vh;
+}
+
+.ll {
   overflow: auto;
 }
 
