--- a/reactApp/src/components/Ingredientes/Ingredientes.css
+++ b/reactApp/src/components/Ingredientes/Ingredientes.css
@@ -40,13 +40,14 @@
   color: white;
 }
 
-.add-student-form, .student-list {
+.add-student-form{
   background-color: white;
   border-radius: 0.5rem;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   padding: 1rem;
   margin-bottom: 2rem;
 }
+
 
 .form-title, .list-title {
   font-size: 1.5rem;
@@ -153,12 +154,12 @@
 }
 
 .edit-button {
-  background-color: #fbbf24;
+  background-color: #1b65b9;
   color: #92400e;
 }
 
 .edit-button:hover {
-  background-color: #f59e0b;
+  background-color: #0bcef5;
 }
 
 .delete-button {
@@ -203,4 +204,34 @@
   display: flex;
   justify-content: flex-end;
   gap: 0.5rem;
+}
+
+.search-input::placeholder{
+  color: #aaa;
+    font-style: italic;
+}
+
+.search-input:hover {
+  border-color: #007BFF;
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.4);
+}
+
+.search-input {
+  border-radius: 20px;
+    height: 4.5vh;
+    width: 14vw;
+    padding: 7px 30px; /* Aumenté el padding a la derecha para hacer espacio para la lupa */
+    margin-top: 13px;
+    font-size: 13px;
+    border: 1px solid #ccc;
+    outline: none;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0);
+    color: unset;
+}
+
+.search-container {
+  display: grid;
+  grid-template-columns: 70% 75% 5%;
 }
