--- a/reactApp/src/components/Ingredientes/Ingredientes.css
+++ b/reactApp/src/components/Ingredientes/Ingredientes.css
@@ -1,7 +1,9 @@
 .student-management {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
+  padding-left: 2rem;
+  padding-right: 2rem;
   background-color: #f3f4f6;
 }
 
@@ -56,6 +58,12 @@
   margin-bottom: 1.5rem;
 }
 
+.list-title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #374151;
+}
+
 .form-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -66,7 +74,7 @@
   padding: 0.75rem;
   border: 1px solid #d1d5db;
   border-radius: 0.375rem;
-  width: 100%;
+  width:90%;
   transition: border-color 0.2s, box-shadow 0.2s;
   gap: 5px;
 }
@@ -77,7 +85,7 @@
   box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.5);
 }
 
-.submit-button {
+.submit-button2 {
   margin-top: 1.5rem;
   width: 100%;
   padding: 0.75rem;
@@ -89,7 +97,7 @@
   transition: background-color 0.2s;
 }
 
-.submit-button:hover {
+.submit-button2:hover {
   background-color: #2563eb;
 }
 
@@ -155,7 +163,6 @@
 
 .edit-button {
   background-color: #1b65b9;
-  color: #92400e;
 }
 
 .edit-button:hover {
@@ -221,7 +228,6 @@
     height: 4.5vh;
     width: 14vw;
     padding: 7px 30px; /* Aumenté el padding a la derecha para hacer espacio para la lupa */
-    margin-top: 13px;
     font-size: 13px;
     border: 1px solid #ccc;
     outline: none;
@@ -234,4 +240,5 @@
 .search-container {
   display: grid;
   grid-template-columns: 70% 75% 5%;
+  max-height: 7vh;
 }
