--- a/reactApp/src/Pages/Home_/Home.css
+++ b/reactApp/src/Pages/Home_/Home.css
@@ -1,4 +1,5 @@
-.mainRightDonutGraphics {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+.faffa {
+    display: flex;
+    justify-content: space-around;
+    padding: 2%;
 }
