--- a/reactApp/src/components/NavPC/NavPC.css
+++ b/reactApp/src/components/NavPC/NavPC.css
@@ -1,14 +1,157 @@
-nav {
+.navPC {
     display: grid;
-    grid-template-columns: 79% 11% 10%;
+    grid-template-columns: 60% 20% 10%;
     background-color: #1b1a66;
-    min-height: 8vh;
+    min-height: 7vh;
+    min-width: 100vw;
+    max-width: 100vw;
 }
 
-nav > div {
+/* Hacer esta vara del tamaño por medio de media queries */
+/* Es que no encontré otra manera, y ni se ponga a buscar pedazo de perro */
+
+.navPC > div {
     color: white;
-    font-size: 18px;
+    font-size: 16px;
     display: flex;
     align-items: center;
-    margin-left: 4vh;
+    margin-left: 2vh;
+}
+
+/* Dejé también estilos por predeterminado, porque al parecer, algunos dispositivos no toman los estilos hechos en mediaQueries. 🔴 */ 
+
+
+@media (min-width: 200px) and (max-width: 374px) {
+    .navPC {
+        display: grid;
+        grid-template-columns: 54% 21% 10%;
+        background-color: #1b1a66;
+        min-height: 50px;
+        min-width: 100vw;
+        max-width: 100vw;
+    }
+
+    .navPC > div {
+        color: white;
+        font-size: 4vw;
+        display: flex;
+        align-items: center;
+        margin-left: 3vh;
+    }
+}
+  
+  
+@media (min-width: 375px) and (max-width: 424px) { 
+    .navPC {
+        display: grid;
+        grid-template-columns: 49% 21% 10%;
+        background-color: #1b1a66;
+        min-height: 50px;
+        min-width: 100vw;
+        max-width: 100vw;
+    }
+
+    .navPC > div {
+        color: white;
+        font-size: 15px;
+        display: flex;
+        align-items: center;
+        margin-left: 3vh;
+    }
+}
+
+  
+@media (min-width: 425px) and (max-width: 600px) {
+    .navPC {
+        display: grid;
+        grid-template-columns: 49% 21% 10%;
+        background-color: #1b1a66;
+        min-height: 50px;
+        min-width: 100vw;
+        max-width: 100vw;
+    }
+
+    .navPC > div {
+        color: white;
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        margin-left: 3.5vh;
+    }
+}
+
+@media (min-width: 601px) and (max-width: 768px) {
+    .navPC {
+        display: grid;
+        grid-template-columns: 49% 21% 10%;
+        background-color: #1b1a66;
+        min-height: 50px;
+        min-width: 100vw;
+        max-width: 100vw;
+    }
+
+    .navPC > div {
+        color: white;
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+        margin-left: 3.5vh;
+    }
+}
+  
+@media (min-width: 769px) and (max-width: 1023px) {
+    .navPC {
+        display: grid;
+        grid-template-columns: 49% 21% 10%;
+        background-color: #1b1a66;
+        min-height: 50px;
+        min-width: 100vw;
+        max-width: 100vw;
+    }
+
+    .navPC > div {
+        color: white;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        margin-left: 4vh;
+    }
+}  
+  
+@media (min-width: 1024px) and (max-width: 1439px) {
+    .navPC {
+        display: grid;
+        grid-template-columns: 49% 21% 10%;
+        background-color: #1b1a66;
+        min-height: 50px;
+        min-width: 100vw;
+        max-width: 100vw;
+    }
+
+    .navPC > div {
+        color: white;
+        font-size: 26px;
+        display: flex;
+        align-items: center;
+        margin-left: 4vh;
+    }
+} 
+  
+@media (min-width: 1440px) and (max-width: 1920px) {
+    .navPC {
+        display: grid;
+        grid-template-columns: 49% 21% 10%;
+        background-color: #1b1a66;
+        min-height: 50px;
+        min-width: 100vw;
+        max-width: 100vw;
+    }
+
+    .navPC > div {
+        color: white;
+        font-size: 30px;
+        display: flex;
+        align-items: center;
+        margin-left: 4vh;
+    }
 }
