--- a/reactApp/src/Pages/Home_/Home.css
+++ b/reactApp/src/Pages/Home_/Home.css
@@ -3,3 +3,9 @@
     justify-content: space-around;
     padding: 2%;
 }
+
+.Panae_container {
+    display: flex;
+    justify-content: space-between;
+    gap: 5px;
+}
