--- a/reactApp/src/components/FormRegister/FormRegister.css
+++ b/reactApp/src/components/FormRegister/FormRegister.css
@@ -1,13 +1,13 @@
 .register-container {
   max-width: 400px;
   margin: 0 auto;
-  padding: 50px;
 }
 
 .register-container h2 {
   text-align: center;
-  color: #333;
-  margin-bottom: 20px;
+  color: unset;
+  opacity: 0.8;
+  margin-bottom: 6vh;
 }
 
 .register-form {
@@ -15,14 +15,11 @@
   flex-direction: column;
 }
 
-.form-group {
-  margin-bottom: 15px;
-}
-
 .form-group label {
   display: block;
   margin-bottom: 5px;
-  color: #666;
+  color: unset;
+  opacity: 0.8;
 }
 
 .form-group input {
