--- a/reactApp/src/components/Stock/StockComponent.css
+++ b/reactApp/src/components/Stock/StockComponent.css
@@ -325,19 +325,68 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
 .modalPay {
-    width: 20vw;
-    height: 10vh;
-    background-color: grey;
-    padding: 1%;
+    background-color: #13133c;
+    padding: 2%;
+    border-radius: 8px;
+    width: 300px;
+}
+.nameModalPay {
+    color: rgba(255, 255, 255, 0.926);
+    font-size: 30px;
+    margin-bottom: 2px;
+}
+.rolModalPay {
+    font-size: 15px;
+    color: rgb(192, 192, 192);
+    margin-bottom: 25px;
+}
+.debeModalPay {
+    color: rgb(205, 204, 204);
+    padding-right: 5px;
+    padding-bottom: 2px;
+}
+.montoModalPay {
+    font-size: 20px;
+    color: white;
+    margin-bottom: 30px;
+}
+.infoDebePagosModalPay {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+.inputModalPay {
     border-radius: 10px;
+    padding: 3%;
+    width: 92%;
+    color: white;
+}
+.buttonCancelModalPay {
+    background-color: transparent;
+    max-width: 30px;
+    max-height: 28px;
+    min-height: 28px;
+    min-width: 30px;
+    color: #a0a0a0;
+    cursor: pointer;
+    border: grey 1px solid;
+    border-radius: 4px;
+    display: grid;
+    place-items: center;
+    margin-left: 90%;
+    transition: all 0.2s ease-in-out;
+}
+.buttonCancelModalPay:hover {
+    border: white 1px solid;
+    color: white;
 }
 
 .loading {
@@ -345,6 +394,5 @@
     justify-content: center;
     align-items: center;
     margin-top: 150px;
-
 }
 
