--- a/reactApp/src/components/CalendarioStudent/CalendarioStudent.css
+++ b/reactApp/src/components/CalendarioStudent/CalendarioStudent.css
@@ -1,8 +1,8 @@
-.calendaryButton {
+.calendaryButtonStudent {
   display: grid;
   grid-template-columns: 70% 10% 20%;
   background-color: #ffffff00;  
-  border: 1.5px solid #a7a7a7;
+  border: 1px solid #a7a7a7;
   border-radius: 8px;
   min-width: 9vw;
   max-width: 12vw;
@@ -16,7 +16,7 @@
   margin-top: 10%;
 }
 
-.calendaryButton:hover {
+.calendaryButtonStudent:hover {
   border-color: #007BFF;
   box-shadow: 0 0 10px rgba(0, 123, 255, 0.4);
 }
