--- a/reactApp/src/components/FormRegister/FormRegister.css
+++ b/reactApp/src/components/FormRegister/FormRegister.css
@@ -53,7 +53,7 @@
   max-width: 70vw;
   margin: 0 auto;
   padding: 10px;
-  background-color: #f5f5f5;
+  background-color: unset;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   
@@ -70,10 +70,10 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  background-color: #fff;
+  background-color: unset;
   margin-bottom: 8px;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px unset;
 }
 
 .user-name {
