--- a/reactApp/src/components/DownBar/DownBar.css
+++ b/reactApp/src/components/DownBar/DownBar.css
@@ -7,7 +7,7 @@
     color: black;
     max-width: 100%;
     border-top: 1px solid grey;
-    min-height: 8vh;
+    min-height: 100%;
     border-bottom: 1px solid grey;
 }
 
