--- a/reactApp/src/components/NavPC/NavPC.css
+++ b/reactApp/src/components/NavPC/NavPC.css
@@ -5,6 +5,13 @@
     min-height: 7vh;
     min-width: 100vw;
     max-width: 100vw;
+    align-items: center;
+    color: white;
+}
+
+.navPC > div {
+    margin-left: 4%;
+
 }
 
 /* Hacer esta vara del tamaño por medio de media queries */
@@ -74,7 +81,7 @@
 @media (min-width: 425px) and (max-width: 600px) {
     .navPC {
         display: grid;
-        grid-template-columns: 49% 21% 10%;
+        grid-template-columns: 63% 16% 10%;
         background-color: #1b1a66;
         min-height: 50px;
         min-width: 100vw;
@@ -93,7 +100,7 @@
 @media (min-width: 601px) and (max-width: 768px) {
     .navPC {
         display: grid;
-        grid-template-columns: 49% 21% 10%;
+        grid-template-columns: 66% 16% 10%;
         background-color: #1b1a66;
         min-height: 50px;
         min-width: 100vw;
@@ -112,7 +119,7 @@
 @media (min-width: 769px) and (max-width: 1023px) {
     .navPC {
         display: grid;
-        grid-template-columns: 69% 21% 10%;
+        grid-template-columns: 70% 16% 10%;
         background-color: #1b1a66;
         min-height: 50px;
         min-width: 100vw;
@@ -131,7 +138,7 @@
 @media (min-width: 1024px) and (max-width: 1439px) {
     .navPC {
         display: grid;
-        grid-template-columns: 60% 15% 15%;
+        grid-template-columns: 76% 10% 15%;
         background-color: #1b1a66;
         min-height: 50px;
         min-width: 100vw;
@@ -150,7 +157,7 @@
 @media (min-width: 1440px) and (max-width: 1920px) {
     .navPC {
         display: grid;
-        grid-template-columns: 70% 15% 15%;
+        grid-template-columns: 76% 10% 15%;
         background-color: #1b1a66;
         min-height: 50px;
         min-width: 100vw;
@@ -159,7 +166,7 @@
 
     .navPC > div {
         color: white;
-        font-size: 30px;
+        font-size: 26px;
         display: flex;
         align-items: center;
         margin-left: 4vh;
