--- a/reactApp/src/components/DownBar/DownBar.css
+++ b/reactApp/src/components/DownBar/DownBar.css
@@ -8,6 +8,7 @@
     border-top: 1px solid grey;
     min-height: 100%;
     transition: width 0.2s ease-in-out, height 0.2s ease-in-out, margin 0.2s ease-in-out;
+    color: #134376;
 }
 
 .navMobileDark {
